--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -6,6 +6,6 @@
     <image class="user-avatar" src="{{ userInfo.avatarUrl }}" mode="aspectFit" />
     <text class="user-nickname">{{ userInfo.nickName }}</text>
     <text hidden="{{ !userInfo.city }}">{{ userInfo.city }}, {{ userInfo.province }}</text>
-    <text hidden="{{ !userInfo.city }}">Thanks~</text>
+    <text hidden="{{ !userInfo.city }}">U r beautiful~</text>
   </view>
 </view>
